# Pendot

./: Pendot Designer.py  README.md  pyproject.toml
.github/workflows/: ci.yml
Dotter.glyphsFilter/Contents/: Info.plist
Dotter.glyphsFilter/Contents/Resources/: IBdialog.nib  IBdialog.xib  plugin.py
DotterController.glyphsReporter/Contents/: Info.plist
DotterController.glyphsReporter/Contents/Resources/: plugin.py
Pendot Designer.glyphsFilter/Contents/: Info.plist
Pendot Designer.glyphsFilter/Contents/Resources/: IBdialog.nib  IBdialog.xib  plugin.py
pendot/: README.md  __init__.py  __main__.py  constants.py  dotter.py  effect.py  glyphsbridge.py  guidelines.py  recipeprovider.py  stroker.py  utils.py
pendot/effect/: __init__.py  copy.py  dotstart.py  dotter.py  guidelines.py  startdot.py  stroker.py
ufostroker/: __init__.py
